--- a/conf.ini
+++ b/conf.ini
@@ -4,16 +4,16 @@
 ;email_subject =
 
 ;smtp or mail
-;mail.method       = smtp
+;mail.method       = mail
 ;mail.server_name  = localhost
 ;mail.from         =
-;mail.smtp_host    = smtp.belhard.com
-;mail.smtp_port    = 587
-;mail.smtp_auth    = true
-;mail.smtp_user    = shabuninil@belhard.com
-;mail.smtp_pass    = dfgdfg
+;mail.smtp_host    = 
+;mail.smtp_port    = 
+;mail.smtp_auth    = 
+;mail.smtp_user    = 
+;mail.smtp_pass    = 
 ;mail.smtp_secure  = TLS
-;mail.smtp_timeout = 5
+;mail.smtp_timeout = 
 
 ; separated by commas
 warning_strings = 'eval('
