--- a/conf.ini
+++ b/conf.ini
@@ -3,20 +3,22 @@
 ;admin_email   =
 ;email_subject =
 
-;smtp or mail
-;mail.method       = smtp
+;mail.method       = smtp or mail
 ;mail.server_name  = localhost
-;mail.from         =
-;mail.smtp_host    = smtp.belhard.com
-;mail.smtp_port    = 587
-;mail.smtp_auth    = true
-;mail.smtp_user    = shabuninil@belhard.com
-;mail.smtp_pass    = dfgdfg
-;mail.smtp_secure  = TLS
+;mail.from         = example@gmail.com
+;mail.smtp_host    =
+;mail.smtp_port    = 25
+;mail.smtp_auth    =
+;mail.smtp_user    =
+;mail.smtp_pass    =
+;mail.smtp_secure  = SSL or TLS
 ;mail.smtp_timeout = 5
 
-; separated by commas
-warning_strings = 'eval('
+; regular expressions
+warning_strings.1 = 'eval *('
+warning_strings.2 = '$_REQUEST[cmd]'
+warning_strings.3 = '<?php $GLOBALS'
+warning_strings.4 = "preg_replace *\((['|\"])(.).*\2[a-z]*e[^\1]*\1 *,"
 
 
 ; files and directories to ignore
